--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ dependencies {
 	implementation 'com.fasterxml.uuid:java-uuid-generator:5.1.0'
 	implementation 'io.hypersistence:hypersistence-tsid:2.1.4'
 	implementation 'org.modelmapper:modelmapper:3.2.4'
+    implementation 'org.apache.commons:commons-lang3:3.18.0'
 	runtimeOnly 'com.h2database:h2'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
